--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "db-up",
   "version": "0.1.0",
-  "description": "Implements a database updater that apply patches found in a folder",
+  "description": "This component allow to migrate a database (schema / data) from a version to the most recent version",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
